# factory_boss

./: Makefile  README.md  pyproject.toml  tox.ini
examples/: schema.yaml  schema_vision.yaml  simple_schema.yaml
factory_boss/: context.py  entity.py  errors.py  generator.py  grammar.py  instance.py  parser.py  reference_resolver.py  relation_maker.py  value_spec.py
factory_boss/scripts/: generate.py
factory_boss/spec_parser/: parser.py  value_spec_registry.py
tests/: test_generate.py
